# simple_ray_tracing

./: .gitignore  README.md
results/: cuda_sphere_02.11.2021.ppm  sphere_10.04.2021.ppm  sphere_10.17.2021.ppm  sphere_10.23.2021.ppm
source/: CMakeLists.txt  cuda.cu  ray_casting.cpp  render.cu  sanity_checks_for_c_vector.cpp  sphere.ppm
source/cpp_implementation/: CMakeLists.txt  c_vector.h  check.h  docs.md  image_buffer.cpp  image_buffer.h  light_source.cpp  light_source.h  material.cpp  material.h  material_builder.cpp  material_builder.h  ray.cpp  ray.h  ray_interactions.cpp  ray_interactions.h  sphere.cpp  sphere.h
source/cpp_implementation/camera/: camera.cpp  camera.h
source/cpp_implementation/camera/interfaces/: i_camera.h
source/cpp_implementation/create_scenes/: create_object_list.cpp  create_object_list.h  create_scene_illumination.cpp  create_scene_illumination.h
source/cpp_implementation/interfaces/: i_check.h  i_geometric_object.h  i_image_buffer.h  i_light_source.h  i_material.h  i_material_builder.h  i_ray.h  i_ray_interactions.h  i_ray_intersection.h  i_reflection_coefficients.h  i_rgb_color.h  i_specular_exponent.h  i_sphere.h
source/cpp_implementation/materials/: material.cpp  material.h  material_builder.cpp  material_builder.h
source/cpp_implementation/materials/interfaces/: i_material.h  i_material_builder.h  i_phong_reflection_coefficients.h  i_reflection_coefficients.h  i_refraction_coefficient.h  i_refraction_coefficients.h  i_specular_exponent.h
source/cpp_implementation/miscellaneous/: check.cpp  check.h  cubic_equation.h  image_buffer.cpp  image_buffer.h  quadratic_equation.h  quartic_equation.h  random_number_generator.h  validate.cpp  validate.h
source/cpp_implementation/miscellaneous/interfaces/: i_image_buffer.h  i_solve.h  i_validate.h
source/cpp_implementation/miscellaneous/templates/: c_vector.h  fixed_sized_array.h  n_tuple.h  random_number_generator.cpp  random_number_generator.h
source/cpp_implementation/objects/: object_list.cpp  object_list.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h
source/cpp_implementation/objects/interfaces/: i_geometric_object.h  i_object_list.h  i_rectangle.h  i_sphere.h  i_target_object.h
source/cpp_implementation/rays/: camera.cpp  camera.h  hit_record.cpp  hit_record.h  light_source.cpp  light_source.h  ray.cpp  ray.h  ray_interactions.cpp  ray_interactions.h  scene_illumination.cpp  scene_illumination.h
source/cpp_implementation/rays/interfaces/: i_camera.h  i_hit_record.h  i_light_source.h  i_ray.h  i_ray_interactions.h  i_ray_intersection.h  i_scene_illumination.h
source/cuda_implementation/: CMakeLists.txt
source/cuda_implementation/materials/: material.cu  material.cuh
source/cuda_implementation/materials/interfaces/: i_material.cuh  i_reflection_coefficients.cuh  i_refraction_coefficient.cuh  i_specular_exponent.cuh
source/cuda_implementation/miscellaneous/templates/: c_vector.cuh  c_vector.h
source/cuda_implementation/objects/: sphere.cu  sphere.cuh
source/cuda_implementation/objects/interfaces/: i_sphere.cuh  i_target_object.cuh
source/cuda_implementation/rays/: ray.cu  ray.cuh
source/cuda_implementation/rays/interfaces/: i_ray.cuh  i_ray_intersection.cuh
source/cuda_playground/: CMakeLists.txt  cuda_samples.cu  test.cu  vector_add.cu
source/tests/: CMakeLists.txt  test_c_vector.cpp  test_image_buffer.cpp  test_light_source.cpp  test_main.cpp
source/tests/materials/: mock_material_builder.h  test_material.cpp
source/tests/miscellaneous/: test_c_vector.cpp  test_cubic_equation.cpp  test_fixed_sized_array.cpp  test_image_buffer.cpp  test_n_tuple.cpp  test_quadratic_equation.cpp  test_quartic_equation.cpp  test_validate.cpp
source/tests/objects/: mock_ray.h  test_sphere.cpp
source/tests/rays/: test_light_source.cpp  test_ray.cpp
